<resources>
    <string name="app_name">Os status</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Frases All</string>
    <string name="menu_Frases_Perfeitas">Frases Perfeitas</string>
    <string name="menu_FrasesdeAmor">Frases de Amor</string>
    <string name="menu_FrasesdeDeus">Frases de Deus</string>
    <string name="menu_FrasesdeReflexao">Frases de Reflexão</string>
    <string name="menu_FrasesTristes">Frases Tristes</string>
    <string name="menu_FrasesparaWhatsapp">Frases para Whatsapp</string>
    <string name="menu_FrasesEngracadas">Frases Engraçadas</string>
    <string name="menu_StatusparaCasal">Status para Casal</string>
    <string name="menu_StatusparaNamorado">Status para Namorado(a)</string>
    <string name="menu_StatusparaFotos">Status para Fotos</string>
    <string name="menu_FrasesparaEx">Frases para Ex</string>
    <string name="menu_Frasesfelizaniversario">Frases feliz aniversario</string>
    <string name="menu_FrasesdeIndiretas">Frases de Indiretas</string>
    <string name="menu_FrasesdeMusicas">Frases de Músicas</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_AdBlock">AdBlock </string>
    <string name="compartilhar">Compartilhar </string>
    <string name="copiar">Copiar</string>
    <string name="favorito">Favoritos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quantidadefrases">+3000 Frases</string>
</resources>