<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compartilhar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardElevation="7dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textColor="@android:color/transparent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/fraseTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="O importante não é vencer todos os dias, mas lutar sempre."
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fraseAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="Autor - Waldemar Valle Martins"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/cinza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewCopiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/copiar"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_copy_24" />

            <TextView
                android:id="@+id/textViewCompartilhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_share_24"
                android:gravity="center"
                android:text="@string/compartilhar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_star_24"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textViewFavorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/favorito"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
